--- a/src/components/statistics/Statistics.module.css
+++ b/src/components/statistics/Statistics.module.css
@@ -1,3 +1,16 @@
+.title {
+  font-size: 2rem;
+  font-weight: 600;
+  display: flex;
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+  align-items: center;
+
+  > div {
+    width: unset;
+  }
+}
+
 .boxes {
   margin-bottom: 2rem;
   display: flex;
