--- a/src/components/cards/ToolCard.module.css
+++ b/src/components/cards/ToolCard.module.css
@@ -137,6 +137,7 @@
   }
 }
 
+.paleTag,
 .tag {
   position: absolute;
   text-transform: uppercase;
@@ -152,6 +153,11 @@
   transform: translateX(-50%) translateY(-50%);
 }
 
+.paleTag {
+  color: var(--primary-60);
+  background-color: var(--primary-10);
+}
+
 .horizontalTag {
   left: 8.25rem;
 
@@ -162,5 +168,11 @@
   @media screen and (max-width: 29.875rem) {
     left: calc(1rem + 2px);
     transform: translateY(-50%);
+  }
+}
+
+.withTag {
+  @media screen and (max-width: 48rem) {
+    margin-top: 0.5rem;
   }
 }
