--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -21,34 +21,33 @@
 .menu,
 .mainLinks {
   display: flex;
-  gap: 2rem;
+  gap: 0.5rem;
+}
 
-  a,
-  button {
-    cursor: pointer;
-    padding: 0.75rem;
-    border: none;
-    background-color: transparent;
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    text-decoration: none;
-    border-radius: 0.5rem;
-    font-weight: 500;
-    color: var(--neutral-70);
+.link {
+  cursor: pointer;
+  padding: 0.75rem;
+  border: none;
+  background-color: transparent;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  text-decoration: none;
+  border-radius: 0.5rem;
+  font-weight: 500;
+  color: var(--neutral-70);
 
-    svg {
-      color: var(--primary-50);
-    }
+  svg {
+    color: var(--primary-50);
+  }
 
-    &:hover {
-      background: var(--primary-10);
-      color: var(--primary-60);
-    }
+  &:hover {
+    background: var(--primary-10);
+    color: var(--primary-60);
+  }
 
-    &:focus {
-      color: var(--primary-70);
-    }
+  &:focus {
+    color: var(--primary-70);
   }
 }
 
