fix: required field

--- a/src/components/outils/usageNumerique/UsageForm.module.css
+++ b/src/components/outils/usageNumerique/UsageForm.module.css
@@ -16,6 +16,11 @@
   > div {
     max-width: 50%;
     width: 100%;
+
+    > div {
+      align-items: flex-start;
+      width: 100%;
+    }
   }
 
   input {
