chore: review css

--- a/src/components/home/Home.module.css
+++ b/src/components/home/Home.module.css
@@ -112,21 +112,21 @@
 
 .card {
   overflow: hidden;
-  display: flex !important;
-  align-items: center !important;
-  padding: 2.5rem !important;
-  gap: 0.5rem !important;
-  border: 2px solid var(--primary-30) !important;
-  border-radius: 1rem !important;
-  background-color: var(--neutral-00) !important;
-  color: var(--neutral-80) !important;
-  font-size: 1.25rem !important;
-  font-weight: 700 !important;
-  line-height: 1.75rem !important;
-  overflow: hidden !important;
-  max-height: 100% !important;
-  max-width: 50rem !important;
-  text-decoration: none !important;
+  display: flex;
+  align-items: center;
+  padding: 2.5rem;
+  gap: 0.5rem;
+  border: 2px solid var(--primary-30);
+  border-radius: 1rem;
+  background-color: var(--neutral-00);
+  color: var(--neutral-80);
+  font-size: 1.25rem;
+  font-weight: 700;
+  line-height: 1.75rem;
+  overflow: hidden;
+  max-height: 100%;
+  max-width: 50rem;
+  text-decoration: none;
 
   img {
     margin-top: 5rem;
@@ -137,8 +137,8 @@
   }
 
   &:hover {
-    color: var(--neutral-80) !important;
-    border-color: var(--primary-40) !important;
+    color: var(--neutral-80);
+    border-color: var(--primary-40);
 
     .bannerLink {
       color: var(--primary-60);
