--- a/src/components/externalModules/shopify/ColumnEquivalent.module.css
+++ b/src/components/externalModules/shopify/ColumnEquivalent.module.css
@@ -14,6 +14,10 @@
   display: flex;
   flex-direction: column;
   padding: 0.75rem 0.75rem 1rem 0.75rem;
+
+  font-size: 0.75em !important;
+  font-weight: 500 !important;
+  line-height: 1.33em !important;
 }
 
 .comparison,
