fix: header svg color

--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -40,6 +40,18 @@
   &:focus {
     color: var(--primary-70) !important;
   }
+
+  svg {
+    color: var(--primary-50) !important;
+
+    &:hover {
+      color: var(--primary-60) !important;
+    }
+
+    &:focus {
+      color: var(--primary-70) !important;
+    }
+  }
 }
 
 .mainLinks {
