fix: react etiquette styles

--- a/src/components/externalModules/shopify/Equivalent.module.css
+++ b/src/components/externalModules/shopify/Equivalent.module.css
@@ -116,6 +116,7 @@
 .comparisons {
   display: flex !important;
   align-items: stretch !important;
+  list-style: none !important;
 }
 
 .comparisonsColumn {
