--- a/src/components/outils/livraison/Disclaimer.module.css
+++ b/src/components/outils/livraison/Disclaimer.module.css
@@ -1,10 +1,10 @@
 .container {
   z-index: 1;
-  overflow: scroll;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
+  max-height: 100%;
   height: 100%;
   background-color: var(--primary-10);
   border-top: 2px solid var(--primary-30);
@@ -12,9 +12,13 @@
   font-size: 0.75rem;
   font-weight: 500;
   line-height: 1rem;
+  align-items: center;
+  overflow-y: auto;
+}
+
+.content {
   padding: 0.75rem 1.25rem 0.75rem 1rem;
   display: flex;
-  align-items: center;
 }
 
 .link {
