--- a/src/components/base/Dropdown.module.css
+++ b/src/components/base/Dropdown.module.css
@@ -4,6 +4,10 @@
   list-style-type: none;
 }
 
+.smallFaq {
+  padding: 0.75rem 0;
+}
+
 .button {
   display: flex;
   width: 2.5rem;
@@ -16,8 +20,21 @@
   color: var(--primary-50);
 }
 
+.smallButton {
+  width: 2rem;
+  height: 2rem;
+  padding: 0.5rem;
+}
+
 .openButton {
   transform: rotate(45deg);
+}
+
+.smallButton.openButton {
+  transform: unset;
+  border-color: transparent;
+  margin-left: 2px;
+  background-color: transparent;
 }
 
 .title {
@@ -38,6 +55,21 @@
     .button {
       border: 2px solid var(--primary-40);
       background-color: var(--primary-10);
+    }
+  }
+}
+
+.smallTitle {
+  h3 {
+    color: var(--neutral-70);
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: 1.5rem;
+  }
+
+  &:hover {
+    h3 {
+      color: var(--primary-70);
     }
   }
 }
