--- a/src/components/outils/Simulator.module.css
+++ b/src/components/outils/Simulator.module.css
@@ -1,4 +1,4 @@
-.distanceSimulator,
+.smallInputSimulator,
 .simulator {
   padding: 1.5rem;
   color: var(--neutral-50);
@@ -33,7 +33,7 @@
   }
 }
 
-.distanceSimulator {
+.smallInputSimulator {
   input {
     max-width: 12rem;
   }
