--- a/src/components/externalModules/SimpleValue.module.css
+++ b/src/components/externalModules/SimpleValue.module.css
@@ -13,9 +13,11 @@
 
   img {
     margin: 0 !important;
-    max-width: unset !important;
+    max-width: 3em !important;
     height: 3em !important;
     width: 3em !important;
+    border: none !important;
+    padding: 0 !important;
   }
 }
 
