feat: add etiquette in footer

--- a/src/components/externalModules/shopify/Equivalent.module.css
+++ b/src/components/externalModules/shopify/Equivalent.module.css
@@ -197,6 +197,7 @@
   background-color: var(--primary-40) !important;
   color: var(--neutral-00) !important;
   position: absolute !important;
+  z-index: 2 !important;
 
   &:hover {
     background-color: var(--primary-60) !important;
