--- a/src/components/comparateur/overscreens/EquivalentsOverscreen.module.css
+++ b/src/components/comparateur/overscreens/EquivalentsOverscreen.module.css
@@ -5,7 +5,7 @@
   border-radius: calc(1rem - 2px) calc(1rem - 2px) 0px 0px;
   border-bottom: 2px solid var(--primary-20);
   display: flex;
-  gap: 1rem;
+  gap: 0.5rem 1rem;
   flex-wrap: wrap-reverse;
 
   > div {
@@ -26,6 +26,12 @@
   height: calc(100% - 8rem);
   overflow: auto;
   padding: 2rem;
+}
+
+.scrollable {
+  margin: 0 -1.5rem -1.5rem -1.5rem;
+  overflow: auto;
+  padding: 0 1.5rem 1.5rem 1.5rem;
 }
 
 .footerCenter,
